fix(footer): remove row1 margin-right on mobile

--- a/src/Components/Footer/Footer.module.scss
+++ b/src/Components/Footer/Footer.module.scss
@@ -83,5 +83,6 @@ $footer-width: 1450px;
 @media screen and (max-width: $break-sm) {
   .row1 {
     flex-direction: column;
+    margin-right: 0;
   }
 }
